--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,4 @@ dependencies {
 }
 
 // Define the main class for the application
-mainClassName = 'edu.uci.ics.UCNETID.service.idm.IDMService'
+mainClassName = 'SuperDelivery.service.idm.IDMService'
