--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 serviceConfig:
   scheme: http://
   hostName: 0.0.0.0
-  port: 1101
+  port: 1234
   path: /api/idm
 
 loggerConfig:
@@ -9,12 +9,12 @@ loggerConfig:
   outputFile: IDMService.log
 
 databaseConfig:
-  dbUsername:
-  dbPassword:
+  dbUsername: root
+  dbPassword: root
   dbHostname: localhost
-  dbPort: 3306
+  dbPort: 1101
   dbDriver: com.mysql.cj.jdbc.Driver
-  dbName:
+  dbName: SuperDelivery
   dbSettings: ?autoReconnect=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=PST
 
 sessionConfig:
