--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
     implementation 'com.google.maps:google-maps-services:0.10.1'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+
+    compile 'com.paypal.sdk:rest-api-sdk:1.13.1'
+    compile "org.slf4j:slf4j-simple:1.6.1"
 }
 
 // Define the main class for the application
